Change to java version 17 (#12)
Using jodconverter
Logical error resolved
Mail-Patter for regex
Update log4j version 2 twice