@@ -35,6 +35,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.concurrent.TimeUnit;
 
 public class TestMediController extends ApplicationTest {
 
@@ -104,7 +105,7 @@ public class TestMediController extends ApplicationTest {
     public void testReadAndSave() {
         File f = new File(System.getProperty("user.home"), "Tannenbusch, Lea.xml");
         try {
-            Files.write(f.toPath(), medi.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(f.toPath(), medi);
         } catch (IOException e) {
             Assertions.fail(e.getMessage(), e);
         }
@@ -150,6 +151,11 @@ public class TestMediController extends ApplicationTest {
         ((TextField) scene.lookup("#email")).setText("lol");
         Platform.runLater(() -> scene.lookup("#email").requestFocus());
         WaitForAsyncUtils.waitForFxEvents();
+        try {
+            TimeUnit.SECONDS.sleep(2);
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
         Assertions.assertThat(((TextField) scene.lookup("#email")).getText().isEmpty()).isTrue();
         ((TextField) scene.lookup("#email")).setText("a@abc.de");
         Platform.runLater(() -> scene.lookup("#email").requestFocus());
@@ -193,7 +199,7 @@ public class TestMediController extends ApplicationTest {
     public void testGeschwister() {
         File f = new File(System.getProperty("user.home"), "Tannenbusch, Lea.xml");
         try {
-            Files.write(f.toPath(), medi.getBytes(StandardCharsets.UTF_8));
+            Files.writeString(f.toPath(), medi);
         } catch (IOException e) {
             Assertions.fail(e.getMessage(), e);
         }
@@ -203,14 +209,14 @@ public class TestMediController extends ApplicationTest {
         Mockito.when(pf.getStandardMessen()).thenReturn(Collections.singletonList(standartMesse));
         DateienVerwalter.setInstance(dv);
         Messdiener m1 = Mockito.mock(Messdiener.class);
-        Mockito.when(m1.makeId()).thenReturn("Tannenbusch, Nora");
+        Mockito.when(m1.toString()).thenReturn("Tannenbusch, Nora");
         Mockito.when(m1.toString()).thenReturn("Tannenbusch, Nora");
         Mockito.when(m1.getGeschwister()).thenReturn(new String[]{"Tannenbusch, Lea", "", ""});
         final Messverhalten mv1 = new Messverhalten();
         Mockito.when(m1.getDienverhalten()).thenReturn(mv1);
         Mockito.when(m1.getFreunde()).thenReturn(new String[]{"", "", "", "", ""});
         Messdiener m2 = Mockito.mock(Messdiener.class);
-        Mockito.when(m2.makeId()).thenReturn("Müller, Lieschen");
+        Mockito.when(m2.toString()).thenReturn("Müller, Lieschen");
         Mockito.when(m2.toString()).thenReturn("Müller, Lieschen");
         Mockito.when(m2.getGeschwister()).thenReturn(new String[]{"", "", ""});
         final Messverhalten mv2 = new Messverhalten();
